--- a/client/src/App.css
+++ b/client/src/App.css
@@ -22,6 +22,11 @@
   font-size: large;
 }
 
+.ProjectCard {
+  margin: 0 auto 20px;
+  width: 50%;
+}
+
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
